# web_scraper

./: .gitignore  pyproject.toml  some.html  web_scraper.py  web_scraper_golden.py
